--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NBA Stats</title>
+    <title>HoopMetrics - Advanced Basketball Analytics</title>
+    <meta name="description" content="Professional-grade basketball analytics platform for tracking performance, analyzing trends, and unlocking deep insights into player statistics." />
   </head>
   <body>
     <div id="root"></div>
